add http server, codegen boilerplate for api-gw
